--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero">
     <div class="header">
         <div class="logo"> 
-            <img src="/assets/logo.png" alt="logo">
+            <img src="assets/logo.png" alt="logo">
         </div>
         <div class="nav">
             <div>
